// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkCard renders a connected Network Card index as expected 1`] = `ShallowWrapper {}`;

exports[`NetworkCard renders authorized request correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 0,
              "justifyContent": "center",
            },
            Object {
              "borderRadius": 30,
              "height": 60,
              "width": 60,
            },
            Object {
              "backgroundColor": "rgba(216,216,216,1)",
            },
            Object {
              "padding": 15,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": undefined,
                "fontSize": 15,
                "textAlign": "center",
              },
              undefined,
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          BF
        </Text>
      </View>
    </View>
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/ForwardArrow.png",
        }
      }
      style={
        Object {
          "height": 18,
          "marginLeft": 24,
          "marginRight": 24,
          "width": 26,
        }
      }
    />
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 0,
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 30,
                "height": 60,
                "width": 60,
              },
              Object {
                "backgroundColor": "rgba(216,216,216,1)",
              },
              Object {
                "padding": 15,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": undefined,
                  "fontSize": 15,
                  "textAlign": "center",
                },
                undefined,
                Object {
                  "fontSize": 20,
                },
              ]
            }
          >
            RC
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 40,
        "marginTop": 22,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontSize": 20,
          "lineHeight": 27,
          "textAlign": "center",
        }
      }
    >
      Brazil Ministry of Finance
    </Text>
    <Text
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      has created this account for you
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "stretch",
        "borderTopColor": "rgba(226,226,226,1)",
        "borderTopWidth": 1,
        "flex": 0,
        "justifyContent": "flex-start",
      }
    }
    style={
      Object {
        "flex": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "stretch",
            "alignSelf": "stretch",
            "borderBottomColor": "rgba(226,226,226,1)",
            "borderBottomWidth": 1,
            "flex": 0,
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(155,155,155,1)",
              "flex": 0,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginLeft": 10,
              "textAlign": "left",
              "width": 83,
            }
          }
        >
          N
          etwork
          :
        </Text>
        <Text
          style={
            Object {
              "color": "rgba(130,130,130,1)",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginRight": 10,
              "textAlign": "right",
            }
          }
        >
          0xdeadbeef
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "stretch",
            "alignSelf": "stretch",
            "borderBottomColor": "rgba(226,226,226,1)",
            "borderBottomWidth": 1,
            "flex": 0,
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(155,155,155,1)",
              "flex": 0,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginLeft": 10,
              "textAlign": "left",
              "width": 83,
            }
          }
        >
          A
          ddress
          :
        </Text>
        <Text
          style={
            Object {
              "color": "rgba(130,130,130,1)",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginRight": 10,
              "textAlign": "right",
            }
          }
        >
          5vZ6nCrJqwhb9nizRBxuPSddrzCBY3mXbu78KMa
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View />
</View>
`;

exports[`NetworkCard renders new request correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 0,
              "justifyContent": "center",
            },
            Object {
              "borderRadius": 30,
              "height": 60,
              "width": 60,
            },
            Object {
              "backgroundColor": "rgba(216,216,216,1)",
            },
            Object {
              "padding": 15,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": undefined,
                "fontSize": 15,
                "textAlign": "center",
              },
              undefined,
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          BF
        </Text>
      </View>
    </View>
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/ForwardArrow.png",
        }
      }
      style={
        Object {
          "height": 18,
          "marginLeft": 24,
          "marginRight": 24,
          "width": 26,
        }
      }
    />
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 0,
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 30,
                "height": 60,
                "width": 60,
              },
              Object {
                "backgroundColor": "rgba(216,216,216,1)",
              },
              Object {
                "padding": 15,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": undefined,
                  "fontSize": 15,
                  "textAlign": "center",
                },
                undefined,
                Object {
                  "fontSize": 20,
                },
              ]
            }
          >
            RC
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 40,
        "marginTop": 22,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontSize": 20,
          "lineHeight": 27,
          "textAlign": "center",
        }
      }
    >
      Brazil Ministry of Finance
    </Text>
    <Text
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      has created this account for you
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "stretch",
        "borderTopColor": "rgba(226,226,226,1)",
        "borderTopWidth": 1,
        "flex": 0,
        "justifyContent": "flex-start",
      }
    }
    style={
      Object {
        "flex": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "stretch",
            "alignSelf": "stretch",
            "borderBottomColor": "rgba(226,226,226,1)",
            "borderBottomWidth": 1,
            "flex": 0,
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(155,155,155,1)",
              "flex": 0,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginLeft": 10,
              "textAlign": "left",
              "width": 83,
            }
          }
        >
          N
          etwork
          :
        </Text>
        <Text
          style={
            Object {
              "color": "rgba(130,130,130,1)",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginRight": 10,
              "textAlign": "right",
            }
          }
        >
          0xdeadbeef
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "stretch",
            "alignSelf": "stretch",
            "borderBottomColor": "rgba(226,226,226,1)",
            "borderBottomWidth": 1,
            "flex": 0,
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(155,155,155,1)",
              "flex": 0,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginLeft": 10,
              "textAlign": "left",
              "width": 83,
            }
          }
        >
          A
          ddress
          :
        </Text>
        <Text
          style={
            Object {
              "color": "rgba(130,130,130,1)",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginRight": 10,
              "textAlign": "right",
            }
          }
        >
          5vZ6nCrJqwhb9nizRBxuPSddrzCBY3mXbu78KMa
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "flex": 0,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 8,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 15,
            "padding": 10,
          },
          Array [
            Object {
              "borderColor": "rgba(74,74,74,1)",
              "borderWidth": 1,
              "padding": 15,
            },
            Object {
              "marginRight": 10,
            },
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Montserrat",
              "fontSize": 18,
              "textAlign": "center",
            },
            Object {
              "color": "rgba(74,74,74,1)",
            },
            Object {},
          ]
        }
      >
        Cancel
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 8,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 15,
            "padding": 10,
          },
          Array [
            Object {
              "backgroundColor": "rgba(91,84,199,1)",
              "padding": 15,
            },
            undefined,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Montserrat",
              "fontSize": 18,
              "textAlign": "center",
            },
            Array [
              Object {
                "fontFamily": "Montserrat",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
            ],
            Object {},
          ]
        }
      >
        Add Account
      </Text>
    </View>
  </View>
</View>
`;

exports[`NetworkCard renders request with errors 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 0,
              "justifyContent": "center",
            },
            Object {
              "borderRadius": 30,
              "height": 60,
              "width": 60,
            },
            Object {
              "backgroundColor": "rgba(216,216,216,1)",
            },
            Object {
              "padding": 15,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": undefined,
                "fontSize": 15,
                "textAlign": "center",
              },
              undefined,
              Object {
                "fontSize": 20,
              },
            ]
          }
        >
          BF
        </Text>
      </View>
    </View>
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/ForwardArrow.png",
        }
      }
      style={
        Object {
          "height": 18,
          "marginLeft": 24,
          "marginRight": 24,
          "width": 26,
        }
      }
    />
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 0,
                "justifyContent": "center",
              },
              Object {
                "borderRadius": 30,
                "height": 60,
                "width": 60,
              },
              Object {
                "backgroundColor": "rgba(216,216,216,1)",
              },
              Object {
                "padding": 15,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": undefined,
                  "fontSize": 15,
                  "textAlign": "center",
                },
                undefined,
                Object {
                  "fontSize": 20,
                },
              ]
            }
          >
            RC
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 40,
        "marginTop": 22,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontSize": 20,
          "lineHeight": 27,
          "textAlign": "center",
        }
      }
    >
      Brazil Ministry of Finance
    </Text>
    <Text
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      has created this account for you
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "stretch",
        "borderTopColor": "rgba(226,226,226,1)",
        "borderTopWidth": 1,
        "flex": 0,
        "justifyContent": "flex-start",
      }
    }
    style={
      Object {
        "flex": 0,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "stretch",
            "alignSelf": "stretch",
            "borderBottomColor": "rgba(226,226,226,1)",
            "borderBottomWidth": 1,
            "flex": 0,
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(155,155,155,1)",
              "flex": 0,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginLeft": 10,
              "textAlign": "left",
              "width": 83,
            }
          }
        >
          N
          etwork
          :
        </Text>
        <Text
          style={
            Object {
              "color": "rgba(130,130,130,1)",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginRight": 10,
              "textAlign": "right",
            }
          }
        >
          0xdeadbeef
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "stretch",
            "alignSelf": "stretch",
            "borderBottomColor": "rgba(226,226,226,1)",
            "borderBottomWidth": 1,
            "flex": 0,
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(155,155,155,1)",
              "flex": 0,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginLeft": 10,
              "textAlign": "left",
              "width": 83,
            }
          }
        >
          A
          ddress
          :
        </Text>
        <Text
          style={
            Object {
              "color": "rgba(130,130,130,1)",
              "flex": 1,
              "fontFamily": undefined,
              "fontSize": 14,
              "lineHeight": 23,
              "marginRight": 10,
              "textAlign": "right",
            }
          }
        >
          5vZ6nCrJqwhb9nizRBxuPSddrzCBY3mXbu78KMa
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(155,155,155,1)",
          "fontSize": 14,
          "lineHeight": 19,
          "textAlign": "center",
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    This doesnt work for some reason
  </Text>
  <View
    style={
      Object {
        "flex": 0,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 8,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 15,
            "padding": 10,
          },
          Array [
            Object {
              "borderColor": "rgba(74,74,74,1)",
              "borderWidth": 1,
              "padding": 15,
            },
            Object {
              "marginRight": 10,
            },
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Montserrat",
              "fontSize": 18,
              "textAlign": "center",
            },
            Object {
              "color": "rgba(74,74,74,1)",
            },
            Object {},
          ]
        }
      >
        Cancel
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 8,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 15,
            "padding": 10,
          },
          Object {
            "backgroundColor": "rgba(0,0,0,0)",
            "borderColor": "rgba(185, 185, 185, 1)",
            "borderWidth": 1,
            "padding": 15,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Montserrat",
              "fontSize": 18,
              "textAlign": "center",
            },
            Array [
              Object {
                "fontFamily": "Montserrat",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
            ],
            Object {
              "color": "rgba(185, 185, 185, 1)",
            },
          ]
        }
      >
        Add Account
      </Text>
    </View>
  </View>
</View>
`;
